--- a/shares-portal/src/main/resources/static/index_student.html
+++ b/shares-portal/src/main/resources/static/index_student.html
@@ -14,12 +14,13 @@
   <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="bower_components/polyfill/dist/polyfill.min.js"></script>
   <script src="bower_components/vue/dist/vue.js"></script>
+  <script src="https://cdn.bootcdn.net/ajax/libs/axios/1.0.0-alpha.1/axios.min.js"></script>
 </head>
 <body>
 <header class="container-fluid mb-3 bg-light">
 
   <nav class="navbar navbar-expand-lg   navbar-light bg-light">
-    <a class="navbar-brand" href="index.html"> <img alt="达内知道" src="img/straw_logo_239x80.png" height="33">
+    <a class="navbar-brand" href="index_student.html"> <img alt="好享" src="img/straw_logo_239x80.png" height="33">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -27,7 +28,7 @@
 
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="index.html">首页</a>
+        <a class="nav-item nav-link active" href="index_student.html">首页</a>
         <a class="nav-item nav-link active" href="personal/myQuestion.html">提问</a>
         <a class="nav-item nav-link active" href="personal/task.html">任务</a>
         <a class="nav-item nav-link active" href="personal/collect.html">收藏</a>
@@ -163,7 +164,7 @@
 <div class="container-fluid"  th:fragment="tags_nav" >
   <div class="nav font-weight-light" id="tagsApp">
     <a href="tag/tag_question.html" class="nav-item nav-link text-info"><small>全部</small></a>
-    <a href="tag/tag_question.html" class="nav-item nav-link text-info"><small>Java基础</small></a>
+    <a href="tag/tag_question.html" class="nav-item nav-link text-info" v-for="tag in tags"><small v-text="tag.name">Java基础</small></a>
   </div>
 </div>
 
@@ -460,4 +461,6 @@
   </p>
 </footer>
 </body>
+<script src="js/utils.js"></script>
+<script src="js/tags_nav.js"></script>
 </html>
