--- a/shares-portal/src/main/resources/static/login.html
+++ b/shares-portal/src/main/resources/static/login.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="renderer" content="webkit">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>达内知道登录</title>
+  <title>好享登录</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css">
@@ -15,7 +15,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="mx-auto mt-5" style="width: 400px;">
-      <h2 class="text-center "><b>达内</b>·知道</h2>
+      <h2 class="text-center "><b>好享</b></h2>
       <div class="bg-white p-4">
         <p class="text-center">用户登录</p>
         <div id="error" class="alert alert-danger d-none">
