--- a/shares-portal/src/main/resources/static/search/search.html
+++ b/shares-portal/src/main/resources/static/search/search.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="renderer" content="webkit">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>达内知道搜索</title>
+  <title>好享搜索</title>
   <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="../bower_components/summernote/dist/summernote-bs4.min.css">
@@ -29,7 +29,7 @@
 
   <nav class="navbar navbar-expand-lg   navbar-light bg-light">
     <a class="navbar-brand" href="../index.html">
-      <img alt="达内知道" src="../img/straw_logo_239x80.png" height="33">
+      <img alt="好享" src="../img/GShare_logo_230x80.png" height="33">
     </a>
     <button class="navbar-toggler" type="button"
             data-toggle="collapse" data-target="#navbarNavAltMarkup"
