--- a/shares-portal/src/main/resources/static/index_teacher.html
+++ b/shares-portal/src/main/resources/static/index_teacher.html
@@ -29,7 +29,7 @@
 <header class="container-fluid mb-3 bg-light">
 
   <nav class="navbar navbar-expand-lg   navbar-light bg-light">
-    <a class="navbar-brand" href="index.html"> <img alt="达内知道" src="img/straw_logo_239x80.png" height="33">
+    <a class="navbar-brand" href="index.html"> <img alt="达内知道" src="img/GShare_logo_230x80.png" height="33">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
