--- a/shares-portal/src/main/resources/static/index_student.html
+++ b/shares-portal/src/main/resources/static/index_student.html
@@ -251,215 +251,52 @@
     </div>
     <div class="col-md-12 col-lg-4 pb-2">
       <!--个人信息-->
-      <div class="container-fluid font-weight-light">
+      <div class="container-fluid font-weight-light" id="userApp">
         <div class="card">
-          <h5 class="card-header">陈某</h5>
+          <h5 class="card-header" v-text="user.nickname">陈某</h5>
           <div class="card-body">
             <div class="list-inline mb-1 ">
                 <a class="list-inline-item mx-3 my-1 text-center">
-                  <div><strong>10</strong></div>
+                  <div><strong>0</strong></div>
                   <div>回答</div>
                 </a>
                 <a class="list-inline-item mx-3 my-1 text-center" href="personal/myQuestion.html">
-                  <div><strong>10</strong></div>
+                  <div><strong v-text="user.questions">10</strong></div>
                   <div>提问</div>
                 </a>
                 <a class="list-inline-item mx-3 my-1 text-center" href="personal/collect.html">
-                  <div><strong>10</strong></div>
+                  <div><strong v-text="user.collections">10</strong></div>
                   <div>收藏</div>
                 </a>
-                <a class="list-inline-item mx-3 my-1 text-center" href="personal/task.html">
-                  <div><strong>10</strong></div>
-                  <div>任务</div>
+                <a class="list-inline-item mx-3 my-1 text-center" style="pointer-events: none" href="personal/task.html">
+                  <div style="text-decoration: line-through"><strong>0</strong></div>
+                  <div style="text-decoration: line-through">任务</div>
                 </a>
             </div>
           </div>
         </div>
       </div>
       <!--热点数据-->
-      <div class="container-fluid bg-light mt-5">
+      <div class="container-fluid bg-light mt-5" id="hotQuestion">
         <h4 class="m-2 p-2 font-weight-light"><i class="fa fa-list" aria-hidden="true"></i> 热点问题</h4>
-        <div class="list-group list-group-flush">
-          <a href="question/detail.html" class="list-group-item list-group-item-action">
+        <div class="list-group list-group-flush" v-for="hotquestion in hotquestions" >
+          <a href="question/detail.html" class="list-group-item list-group-item-action" >
             <div class="d-flex w-100 justify-content-between">
-              <h6 class="mb-1 text-dark">equals和==的区别是啥？</h6>
+              <h6 class="mb-1 text-dark" v-text="hotquestion.title">quals和==的区别是啥？</h6>
             </div>
             <div class="row">
               <div class="col-6">
-                <small class="mr-2">1条回答</small>
-                <small class="text-warning" style="display: none">未回复</small>
-                <small class="text-info" style="display: none">未解决</small>
-                <small class="text-success">已解决</small>
+                <small class="mr-2"><span v-text="hotquestion.countAnswer">1</span>条回答</small>
+                <small class="text-warning" style="display: none" v-show="hotquestion.status==0">未回复</small>
+                <small class="text-info" style="display: none" v-show="hotquestion.status==1">未解决</small>
+                <small class="text-success" v-show="hotquestion.status==2">已解决</small>
               </div>
               <div class="col-6 text-right">
-                <small>10浏览</small>
+                <small><span v-text="hotquestion.pageViews">21</span>浏览</small>
               </div>
             </div>
           </a>
         </div>
-        <div class="list-group list-group-flush">
-          <a href="question/detail.html" class="list-group-item list-group-item-action">
-            <div class="d-flex w-100 justify-content-between">
-              <h6 class="mb-1 text-dark">equals和==的区别是啥？</h6>
-            </div>
-            <div class="row">
-              <div class="col-6">
-                <small class="mr-2">1条回答</small>
-                <small class="text-warning" style="display: none">未回复</small>
-                <small class="text-info" style="display: none">未解决</small>
-                <small class="text-success">已解决</small>
-              </div>
-              <div class="col-6 text-right">
-                <small>10浏览</small>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="list-group list-group-flush">
-          <a href="question/detail.html" class="list-group-item list-group-item-action">
-            <div class="d-flex w-100 justify-content-between">
-              <h6 class="mb-1 text-dark">equals和==的区别是啥？</h6>
-            </div>
-            <div class="row">
-              <div class="col-6">
-                <small class="mr-2">1条回答</small>
-                <small class="text-warning" style="display: none">未回复</small>
-                <small class="text-info" style="display: none">未解决</small>
-                <small class="text-success">已解决</small>
-              </div>
-              <div class="col-6 text-right">
-                <small>10浏览</small>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="list-group list-group-flush">
-          <a href="question/detail.html" class="list-group-item list-group-item-action">
-            <div class="d-flex w-100 justify-content-between">
-              <h6 class="mb-1 text-dark">equals和==的区别是啥？</h6>
-            </div>
-            <div class="row">
-              <div class="col-6">
-                <small class="mr-2">1条回答</small>
-                <small class="text-warning" style="display: none">未回复</small>
-                <small class="text-info" style="display: none">未解决</small>
-                <small class="text-success">已解决</small>
-              </div>
-              <div class="col-6 text-right">
-                <small>10浏览</small>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="list-group list-group-flush">
-          <a href="question/detail.html" class="list-group-item list-group-item-action">
-            <div class="d-flex w-100 justify-content-between">
-              <h6 class="mb-1 text-dark">equals和==的区别是啥？</h6>
-            </div>
-            <div class="row">
-              <div class="col-6">
-                <small class="mr-2">1条回答</small>
-                <small class="text-warning" style="display: none">未回复</small>
-                <small class="text-info" style="display: none">未解决</small>
-                <small class="text-success">已解决</small>
-              </div>
-              <div class="col-6 text-right">
-                <small>10浏览</small>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="list-group list-group-flush">
-          <a href="question/detail.html" class="list-group-item list-group-item-action">
-            <div class="d-flex w-100 justify-content-between">
-              <h6 class="mb-1 text-dark">equals和==的区别是啥？</h6>
-            </div>
-            <div class="row">
-              <div class="col-6">
-                <small class="mr-2">1条回答</small>
-                <small class="text-warning" style="display: none">未回复</small>
-                <small class="text-info" style="display: none">未解决</small>
-                <small class="text-success">已解决</small>
-              </div>
-              <div class="col-6 text-right">
-                <small>10浏览</small>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="list-group list-group-flush">
-          <a href="question/detail.html" class="list-group-item list-group-item-action">
-            <div class="d-flex w-100 justify-content-between">
-              <h6 class="mb-1 text-dark">equals和==的区别是啥？</h6>
-            </div>
-            <div class="row">
-              <div class="col-6">
-                <small class="mr-2">1条回答</small>
-                <small class="text-warning" style="display: none">未回复</small>
-                <small class="text-info" style="display: none">未解决</small>
-                <small class="text-success">已解决</small>
-              </div>
-              <div class="col-6 text-right">
-                <small>10浏览</small>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="list-group list-group-flush">
-          <a href="question/detail.html" class="list-group-item list-group-item-action">
-            <div class="d-flex w-100 justify-content-between">
-              <h6 class="mb-1 text-dark">equals和==的区别是啥？</h6>
-            </div>
-            <div class="row">
-              <div class="col-6">
-                <small class="mr-2">1条回答</small>
-                <small class="text-warning" style="display: none">未回复</small>
-                <small class="text-info" style="display: none">未解决</small>
-                <small class="text-success">已解决</small>
-              </div>
-              <div class="col-6 text-right">
-                <small>10浏览</small>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="list-group list-group-flush">
-          <a href="question/detail.html" class="list-group-item list-group-item-action">
-            <div class="d-flex w-100 justify-content-between">
-              <h6 class="mb-1 text-dark">equals和==的区别是啥？</h6>
-            </div>
-            <div class="row">
-              <div class="col-6">
-                <small class="mr-2">1条回答</small>
-                <small class="text-warning" style="display: none">未回复</small>
-                <small class="text-info" style="display: none">未解决</small>
-                <small class="text-success">已解决</small>
-              </div>
-              <div class="col-6 text-right">
-                <small>10浏览</small>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="list-group list-group-flush">
-          <a href="question/detail.html" class="list-group-item list-group-item-action">
-            <div class="d-flex w-100 justify-content-between">
-              <h6 class="mb-1 text-dark">equals和==的区别是啥？</h6>
-            </div>
-            <div class="row">
-              <div class="col-6">
-                <small class="mr-2">1条回答</small>
-                <small class="text-warning" style="display: none">未回复</small>
-                <small class="text-info" style="display: none">未解决</small>
-                <small class="text-success">已解决</small>
-              </div>
-              <div class="col-6 text-right">
-                <small>10浏览</small>
-              </div>
-            </div>
-          </a>
-        </div>
-
       </div>
     </div>
     <!-- / class="col-4"-->
@@ -474,5 +311,8 @@
 <script src="js/utils.js"></script>
 <script src="js/tags_nav.js"></script>
 <script src="js/index.js"></script>
+<script src="js/user_info.js"></script>
+<script src="js/hot_question.js"></script>
+
 
 </html>
