--- a/shares-portal/src/main/resources/static/index_student.html
+++ b/shares-portal/src/main/resources/static/index_student.html
@@ -20,7 +20,7 @@
 <header class="container-fluid mb-3 bg-light">
 
   <nav class="navbar navbar-expand-lg   navbar-light bg-light">
-    <a class="navbar-brand" href="index_student.html"> <img alt="好享" src="img/GShare_logo_230x80.png" height="33">
+    <a class="navbar-brand" href="/index_student.html"> <img alt="好享" src="img/GShare_logo_230x80.png" height="33">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -163,7 +163,7 @@
 <!--引入标签的导航栏-->
 <div class="container-fluid"  th:fragment="tags_nav" >
   <div class="nav font-weight-light" id="tagsApp">
-    <a href="tag/tag_question.html" class="nav-item nav-link text-info"><small>全部</small></a>
+<!--    <a href="tag/tag_question.html" class="nav-item nav-link text-info"><small>全部</small></a>-->
     <a href="tag/tag_question.html" class="nav-item nav-link text-info" v-for="tag in tags"><small v-text="tag.name">Java基础</small></a>
   </div>
 </div>
@@ -175,7 +175,7 @@
         <div class="container-fluid">
           <h4 class="border-bottom m-2 p-2 font-weight-light"><i class="fa fa-comments-o" aria-hidden="true"></i> 我的问答</h4>
           <div id="questionsApp">
-          <div class="row" style="display: none">
+          <div class="row" style="display: none" v-show="questions == null">
             <div class="alert alert-warning w-100" role="alert">
               抱歉您还没有提问内容， <a href="question/create.html" class="alert-link">您可以点击此处提问</a>，或者点击标签查看其它问答
             </div>
@@ -190,7 +190,7 @@
                 </div>
                 <div class="col-md-12 col-lg-10">
                   <h5 class="mt-0 mb-1 text-truncate">
-                    <a class="text-dark" href="question/detail.html" v-text="question.title">
+                    <a class="text-dark" href="question/detail.html" v-text="question.title" :href="'/question/detail_student.html?'+question.id">
                       eclipse 如何导入项目？
                     </a>
                   </h5>
